{
  "version": 4,
  "terraform_version": "1.6.6",
  "serial": 10,
  "lineage": "9fa196a3-ac0b-6f73-b86d-6aea533f1be0",
  "resources": [
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "aks_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/9b6d204f-381b-4e09-8ce3-b10cfc7a5a4f/resourceGroups/networking-resource-group/providers/Microsoft.Network/networkSecurityGroups/aks-nsg",
            "location": "uksouth",
            "name": "aks-nsg",
            "resource_group_name": "networking-resource-group",
            "security_rule": [],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.azurerm_resource_group.aks_rg"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "kube_apiserver_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "443",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/9b6d204f-381b-4e09-8ce3-b10cfc7a5a4f/resourceGroups/networking-resource-group/providers/Microsoft.Network/networkSecurityGroups/aks-nsg/securityRules/kube-apiserver-rule",
            "name": "kube-apiserver-rule",
            "network_security_group_name": "aks-nsg",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "networking-resource-group",
            "source_address_prefix": "0.0.0.0/0",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.azurerm_network_security_group.aks_nsg",
            "module.networking.azurerm_resource_group.aks_rg"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "ssh_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "22",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/9b6d204f-381b-4e09-8ce3-b10cfc7a5a4f/resourceGroups/networking-resource-group/providers/Microsoft.Network/networkSecurityGroups/aks-nsg/securityRules/ssh-rule",
            "name": "ssh-rule",
            "network_security_group_name": "aks-nsg",
            "priority": 101,
            "protocol": "Tcp",
            "resource_group_name": "networking-resource-group",
            "source_address_prefix": "0.0.0.0/0",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.azurerm_network_security_group.aks_nsg",
            "module.networking.azurerm_resource_group.aks_rg"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "control_plane_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.1.0/24",
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/9b6d204f-381b-4e09-8ce3-b10cfc7a5a4f/resourceGroups/networking-resource-group/providers/Microsoft.Network/virtualNetworks/aks-vnet/subnets/control-plane-subnet",
            "name": "control-plane-subnet",
            "resource_group_name": "networking-resource-group",
            "virtual_network_name": "aks-vnet"
          },
          "dependencies": [
            "module.networking.azurerm_resource_group.aks_rg",
            "module.networking.azurerm_virtual_network.aks_vnet"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "worker_node_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.2.0/24",
            "address_prefixes": [
              "10.0.2.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/9b6d204f-381b-4e09-8ce3-b10cfc7a5a4f/resourceGroups/networking-resource-group/providers/Microsoft.Network/virtualNetworks/aks-vnet/subnets/worker-node-subnet",
            "name": "worker-node-subnet",
            "resource_group_name": "networking-resource-group",
            "virtual_network_name": "aks-vnet"
          },
          "dependencies": [
            "module.networking.azurerm_resource_group.aks_rg",
            "module.networking.azurerm_virtual_network.aks_vnet"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "aks_vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "029f0d3a-d7e7-43d5-b310-6157890d507a",
            "id": "/subscriptions/9b6d204f-381b-4e09-8ce3-b10cfc7a5a4f/resourceGroups/networking-resource-group/providers/Microsoft.Network/virtualNetworks/aks-vnet",
            "location": "uksouth",
            "name": "aks-vnet",
            "resource_group_name": "networking-resource-group",
            "vm_protection_enabled": false
          },
          "dependencies": [
            "module.networking.azurerm_resource_group.aks_rg"
          ]
        }
      ]
    }
  ]
}